@@ -7,8 +7,8 @@ import time
 from asm3.locales import *
 
 
-VERSION = "47u [Fri  7 Jul 10:51:39 BST 2023]"
-BUILD = "07071051"
+VERSION = "47u [Tue 11 Jul 16:35:15 BST 2023]"
+BUILD = "07111635"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
