@@ -1,6 +1,7 @@
 47
 ================
 
+11/07/23 additional fields in autocomplete when entering online form names #1309
 06/07/23 Allow CSV animal deceased fields to be updated on existing records
 05/07/23 Refactor login and valid user check, remove redundant code
 05/07/23 CSV import fields: ANIMALDECEASEDREASON/NOTES, ANIMALEUTHANIZED
